[project]
name = "ffmpeg-hw-accel"
version = "0.1.0"
description = "Convert ffmpeg commands to use hardware acceleration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/ffmpeg_hw_accel --cov-report=term-missing"

[tool.hatch.build.targets.wheel]
packages = ["src/ffmpeg_hw_accel"]