[project]
name = "ffmpeg-hw-accel"          # must be unique on PyPI
version = "0.1.0"
description = "Convert ffmpeg commands to use hardware acceleration"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "you@example.com" }
]
keywords = ["ffmpeg", "hardware", "acceleration", "nvenc", "vaapi", "videotoolbox", "qsv"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Conversion",
]

[project.urls]
Homepage = "https://github.com/beesar-id/ffmpeg-hw-accel"
Repository = "https://github.com/beesar-id/ffmpeg-hw-accel"
Issues = "https://github.com/beesar-id/ffmpeg-hw-accel/issues"

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/ffmpeg_hw_accel --cov-report=term-missing"

[tool.hatch.build.targets.wheel]
packages = ["src/ffmpeg_hw_accel"]